@@ -1,9 +1,9 @@
+// src/main/java/com/example/demo/service/impl/AssetLifecycleEventServiceImpl.java
 package com.example.demo.service.impl;
 
 import com.example.demo.entity.Asset;
 import com.example.demo.entity.AssetLifecycleEvent;
 import com.example.demo.exception.ResourceNotFoundException;
-import com.example.demo.exception.BadRequestException;
 import com.example.demo.repository.AssetLifecycleEventRepository;
 import com.example.demo.repository.AssetRepository;
 import com.example.demo.service.AssetLifecycleEventService;
@@ -15,51 +15,39 @@ import java.util.List;
 
 @Service
 public class AssetLifecycleEventServiceImpl implements AssetLifecycleEventService {
-    
-    private final AssetLifecycleEventRepository eventRepository;
-    private final AssetRepository assetRepository;
-    
-    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository, AssetRepository assetRepository) {
-        this.eventRepository = eventRepository;
-        this.assetRepository = assetRepository;
+
+    private final AssetLifecycleEventRepository eventRepo;
+    private final AssetRepository assetRepo;
+
+    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepo,
+                                          AssetRepository assetRepo) {
+        this.eventRepo = eventRepo;
+        this.assetRepo = assetRepo;
     }
-    
+
     @Override
     public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
-        Asset asset = assetRepository.findById(assetId)
-            .orElseThrow(() -> new ResourceNotFoundException("Asset not found with id " + assetId));
-        
-        if (event.getEventType() == null || event.getEventType().trim().isEmpty()) {
-            throw new BadRequestException("Event type must not be empty");
+        Asset asset = assetRepo.findById(assetId)
+            .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
+
+        if (event.getEventType() == null || event.getEventType().isBlank()) {
+            throw new IllegalArgumentException("Event type required");
         }
-        
-        if (event.getEventDescription() == null || event.getEventDescription().trim().isEmpty()) {
-            throw new BadRequestException("Event description must not be empty");
+        if (event.getEventDescription() == null || event.getEventDescription().isBlank()) {
+            throw new IllegalArgumentException("Event description required");
         }
-        
-        if (event.getEventDate() == null) {
-            throw new BadRequestException("Event date is required");
+        if (event.getEventDate() == null || event.getEventDate().isAfter(LocalDate.now())) {
+            throw new IllegalArgumentException("Event date invalid");
         }
-        
-        if (event.getEventDate().isAfter(LocalDate.now())) {
-            throw new BadRequestException("Event date cannot be in the future");
-        }
-        
-        // Normalize event type for consistency
-        event.setEventType(event.getEventType().trim().toUpperCase());
-        
+
         event.setAsset(asset);
         event.setLoggedAt(LocalDateTime.now());
-        event.setUpdatedAt(LocalDateTime.now());
-        
-        return eventRepository.save(event);
+        return eventRepo.save(event);
     }
-    
+
     @Override
     public List<AssetLifecycleEvent> getEventsForAsset(Long assetId) {
-        if (!assetRepository.existsById(assetId)) {
-            throw new ResourceNotFoundException("Asset not found with id " + assetId);
-        }
-        return eventRepository.findByAssetIdOrderByLoggedAtDesc(assetId);
+        assetRepo.findById(assetId).orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
+        return eventRepo.findByAssetIdOrderByEventDateDesc(assetId);
     }
 }
